--- a/index.html
+++ b/index.html
@@ -364,116 +364,116 @@
 		</section>
  
 
-<!--    <section class="ftco-section ftco-project" id="projects-section">-->
-<!--    	<div class="container">-->
-<!--    		<div class="row justify-content-center pb-5">-->
-<!--          <div class="col-md-12 heading-section text-center ftco-animate">-->
-<!--          	<h1 class="big big-2">Projects</h1>-->
-<!--            <h2 class="mb-4">My Projects</h2>-->
-<!--            <p>Projects include personal projects / college assignments / hackathon submissions</p>-->
-<!--          </div>-->
-<!--        </div>-->
-<!--    		<div class="row">-->
-<!--  				<div class="col-md-2">-->
-<!--  				</div>-->
-<!--  				<div class="col-md-8">-->
-<!--    				<div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/chumbak.jpg);">-->
-<!--    					<div class="overlay">-->
-<!--    					</div>-->
-<!--	    				<div class="text text-center p-4">-->
-<!--	    					<h3><a target="_blank" href="https://chumbak-clone.netlify.app/">E-commerce Website Clone <br> Click here to view :)</a></h3>-->
-<!--	    					<span>Full Stack Web Application Development <br> Only desktop view available!</span>-->
-<!--	    				</div>-->
-<!--    				</div>-->
-<!--  				</div>-->
-<!--  				<div class="col-md-2"></div>-->
+    <section class="ftco-section ftco-project" id="projects-section">
+    	<div class="container">
+    		<div class="row justify-content-center pb-5">
+          <div class="col-md-12 heading-section text-center ftco-animate">
+          	<h1 class="big big-2">Projects</h1>
+            <h2 class="mb-4">My Projects</h2>
+            <p>Projects include personal projects / college assignments / hackathon submissions</p>
+          </div>
+        </div>
+    		<div class="row">
+  				<div class="col-md-2">
+  				</div>
+  				<div class="col-md-8">
+    				<div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/chumbak.jpg);">
+    					<div class="overlay">
+    					</div>
+	    				<div class="text text-center p-4">
+	    					<h3><a target="_blank" href="https://chumbak-clone.netlify.app/">E-commerce Website Clone <br> Click here to view :)</a></h3>
+	    					<span>Full Stack Web Application Development <br> Only desktop view available!</span>
+	    				</div>
+    				</div>
+  				</div>
+  				<div class="col-md-2"></div>
 
 
-<!--    			<div class="col-md-8">-->
-<!--    				<div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/recommendation.png);background-size: contain;">-->
-<!--    					<div class="overlay">-->
-<!--    					</div>-->
-<!--	    				<div class="text text-center p-4">-->
-<!--	    					<h3><a target="_blank" href="https://github.com/palindrome1311/movie-recommendation-system/blob/master/movie-recommender-systems.ipynb">Movie Recommendation System  <br> Click to view! </a></h3>-->
-<!--	    					<span>GUI using TKinter </span>-->
-<!--	    				</div>-->
-<!--    				</div>-->
+    			<div class="col-md-8">
+    				<div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/recommendation.png);background-size: contain;">
+    					<div class="overlay">
+    					</div>
+	    				<div class="text text-center p-4">
+	    					<h3><a target="_blank" href="https://github.com/palindrome1311/movie-recommendation-system/blob/master/movie-recommender-systems.ipynb">Movie Recommendation System  <br> Click to view! </a></h3>
+	    					<span>GUI using TKinter </span>
+	    				</div>
+    				</div>
 
-<!--    				<div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/music.jpg);background-size: contain;">-->
-<!--    					<div class="overlay"></div>-->
-<!--	    				<div class="text text-center p-4">-->
-<!--	    					<h3><a target="_blank" href="https://github.com/palindrome1311/LSTM-lyrics-generator/blob/master/lyrics%20generator.ipynb">LSTM Lyrics Generator <br> Click to view!</a></h3>-->
-<!--	    					<span>Generate bollywood lyrics (HINDI + ENGLISH )</span>-->
-<!--	    				</div>-->
-<!--    				</div>-->
-<!--    			</div>-->
-<!--    			<div class="col-md-4">-->
-<!--    				<div class="row">-->
-<!--    					<div class="col-md-12">-->
-<!--		    				<div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/ios.png);background-size: contain;">-->
-<!--		    					<div class="overlay"></div>-->
-<!--			    				<div class="text text-center p-4">-->
-<!--			    					<h3><a target="_blank" href="https://github.com/palindrome1311/SwiftUI/tree/master/FirstIOSapp/FirstIOSapp">Swift UI Development</a></h3>-->
-<!--			    					<span>IOS Swift Application Design</span>-->
-<!--			    				</div>-->
-<!--		    				</div>-->
-<!--	    				</div>-->
-<!--	    				<div class="col-md-12">-->
-<!--		    				<div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/ytd.png);background-size: contain;">-->
-<!--		    					<div class="overlay"></div>-->
-<!--			    				<div class="text text-center p-4">-->
-<!--			    					<h3><a target="_blank" href="https://github.com/palindrome1311/ytd-downloader">Youtube to MP3 Converter and Downloader</a></h3>-->
-<!--			    					<span>Python + FLASK Web application</span>-->
-<!--			    				</div>-->
-<!--		    				</div>-->
-<!--	    				</div>-->
-<!--    				</div>-->
-<!--    			</div>-->
+    				<div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/music.jpg);background-size: contain;">
+    					<div class="overlay"></div>
+	    				<div class="text text-center p-4">
+	    					<h3><a target="_blank" href="https://github.com/palindrome1311/LSTM-lyrics-generator/blob/master/lyrics%20generator.ipynb">LSTM Lyrics Generator <br> Click to view!</a></h3>
+	    					<span>Generate bollywood lyrics (HINDI + ENGLISH )</span>
+	    				</div>
+    				</div>
+    			</div>
+    			<div class="col-md-4">
+    				<div class="row">
+    					<div class="col-md-12">
+		    				<div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/ios.png);background-size: contain;">
+		    					<div class="overlay"></div>
+			    				<div class="text text-center p-4">
+			    					<h3><a target="_blank" href="https://github.com/palindrome1311/SwiftUI/tree/master/FirstIOSapp/FirstIOSapp">Swift UI Development</a></h3>
+			    					<span>IOS Swift Application Design</span>
+			    				</div>
+		    				</div>
+	    				</div>
+	    				<div class="col-md-12">
+		    				<div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/ytd.png);background-size: contain;">
+		    					<div class="overlay"></div>
+			    				<div class="text text-center p-4">
+			    					<h3><a target="_blank" href="https://github.com/palindrome1311/ytd-downloader">Youtube to MP3 Converter and Downloader</a></h3>
+			    					<span>Python + FLASK Web application</span>
+			    				</div>
+		    				</div>
+	    				</div>
+    				</div>
+    			</div>
 
 
-<!--    			<div class="col-md-8">-->
-<!--    				<div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/wa.jpg);background-size: contain;">-->
-<!--    					<div class="overlay">-->
-<!--    					</div>-->
-<!--	    				<div class="text text-center p-4">-->
-<!--	    					<h3><a style="cursor: normal;"  id="whatsapp_project" onClick="reply_click()" href="#whatsapp_project">WhatsApp Online Tracker </a></h3>-->
-<!--	    					<span>Using Python And Selenium! </span>-->
-<!--	    				</div>-->
-<!--    				</div>-->
+    			<div class="col-md-8">
+    				<div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/wa.jpg);background-size: contain;">
+    					<div class="overlay">
+    					</div>
+	    				<div class="text text-center p-4">
+	    					<h3><a style="cursor: normal;"  id="whatsapp_project" onClick="reply_click()" href="#whatsapp_project">WhatsApp Online Tracker </a></h3>
+	    					<span>Using Python And Selenium! </span>
+	    				</div>
+    				</div>
 
-<!--    				<div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/project-4.jpg);background-size: contain;">-->
-<!--    					<div class="overlay"></div>-->
-<!--	    				<div class="text text-center p-4">-->
-<!--	    					<h3><a target="_blank" href="#">CUSTOM OBJECT DETECTION </a></h3>-->
-<!--	    					<span>OCR SYSTEM</span>-->
-<!--	    				</div>-->
-<!--    				</div>-->
-<!--    			</div>-->
-<!--    			<div class="col-md-4">-->
-<!--    				<div class="row">-->
-<!--    					<div class="col-md-12">-->
-<!--		    				<div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/st.jpg);background-size: contain;">-->
-<!--		    					<div class="overlay"></div>-->
-<!--			    				<div class="text text-center p-4">-->
-<!--			    					<h3><a target="_blank" href="https://github.com/palindrome1311/Style-transfer">Style Transfer</a></h3>-->
-<!--			    					<span>Add beautiful effects on photos! </span>-->
-<!--			    				</div>-->
-<!--		    				</div>-->
-<!--	    				</div>-->
-<!--	    				<div class="col-md-12">-->
-<!--		    				<div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/fe.JPG);">-->
-<!--		    					<div class="overlay"></div>-->
-<!--			    				<div class="text text-center p-4">-->
-<!--			    					<h3><a target="_blank" href="https://github.com/palindrome1311/Facial-expression-coursera">Identifying Facial Expressions</a></h3>-->
-<!--			    					<span>Python + FLASK Web application</span>-->
-<!--			    				</div>-->
-<!--		    				</div>-->
-<!--	    				</div>-->
-<!--    				</div>-->
-<!--    			</div>-->
-<!--    		</div>-->
-<!--    	</div>-->
-<!--    </section>-->
+    				<div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/project-4.jpg);background-size: contain;">
+    					<div class="overlay"></div>
+	    				<div class="text text-center p-4">
+	    					<h3><a target="_blank" href="#">CUSTOM OBJECT DETECTION </a></h3>
+	    					<span>OCR SYSTEM</span>
+	    				</div>
+    				</div>
+    			</div>
+    			<div class="col-md-4">
+    				<div class="row">
+    					<div class="col-md-12">
+		    				<div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/st.jpg);background-size: contain;">
+		    					<div class="overlay"></div>
+			    				<div class="text text-center p-4">
+			    					<h3><a target="_blank" href="https://github.com/palindrome1311/Style-transfer">Style Transfer</a></h3>
+			    					<span>Add beautiful effects on photos! </span>
+			    				</div>
+		    				</div>
+	    				</div>
+	    				<div class="col-md-12">
+		    				<div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/fe.JPG);">
+		    					<div class="overlay"></div>
+			    				<div class="text text-center p-4">
+			    					<h3><a target="_blank" href="https://github.com/palindrome1311/Facial-expression-coursera">Identifying Facial Expressions</a></h3>
+			    					<span>Python + FLASK Web application</span>
+			    				</div>
+		    				</div>
+	    				</div>
+    				</div>
+    			</div>
+    		</div>
+    	</div>
+    </section>
 
 
     <section class="ftco-section" id="blog-section">
@@ -534,7 +534,7 @@
                 <p>2) Working on Django Framework.</p>
 	            <p>3) Working on Maintaining the REST APIs. </p>
 	            <p>4) Working on different request XML, Json, Iframe. </p>
-	            <p>5) - Working on Celery, Redis Server Integration.</p>
+	            <p>5) Working on Celery, Redis Server Integration.</p>
 
 	                <p class="mb-0">
 	                	<span style="color: #ffbd39"> June 2022 - Presently </span>
