--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
 	</script>
     <title>Atharva Kabra</title>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     
     <link href="https://fonts.googleapis.com/css?family=Poppins:100,200,300,400,500,600,700,800,900" rel="stylesheet">
 
@@ -43,7 +42,8 @@
 	  
     <nav class="navbar navbar-expand-lg navbar-dark ftco_navbar ftco-navbar-light site-navbar-target" id="ftco-navbar">
 	    <div class="container">
-	      <a class="navbar-brand" href="index.html">Atharva &nbsp&nbsp...</a>
+	      <a class="navbar-brand" href="index.html"><img height="80px" width="80px" src="images/1113-[Converted].png"></a>
+		  <a class="navbar-brand" href="index.html">Atharva&nbsp;... &nbsp;</a>
 	      <button class="navbar-toggler js-fh5co-nav-toggle fh5co-nav-toggle" type="button" data-toggle="collapse" data-target="#ftco-nav" aria-controls="ftco-nav" aria-expanded="false" aria-label="Toggle navigation">
 	        <span class="oi oi-menu"></span> Menu
 	      </button>
