--- a/index.html
+++ b/index.html
@@ -625,7 +625,9 @@
   color: white ;
 }</style><div class="myDIV">Indore , India</div>
 <div class="hide">Latitude: 22.7315844
-Longitude: 75.81852</div>
+Longitude: 75.81852
+<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3679.7537883254677!2d75.81704471430784!3d22.737390985098223!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x7ae0ba1de7286707!2zMjLCsDQ0JzE0LjYiTiA3NcKwNDknMDkuMiJF!5e0!3m2!1sen!2sin!4v1662395397185!5m2!1sen!2sin" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+</div>
 
 	          </div>
           </div>
@@ -738,3 +740,4 @@ Longitude: 75.81852</div>
     
   </body>
 </html>
+
