--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
 		          <div class="col-md-12 heading-section ftco-animate">
 		          	<h1 class="big">About</h1>
 		            <h2 class="mb-4">About Me</h2>
-		            <p>To pursue my career with a leading corporate which help me to explore my potential and to obtain a challenging environment where I put my skills to practice and enhance my team and organization growth. Moreover, I have various skills like Personal - diligence, optimistic, calm, keen learner, determined, and some Professional - Leadership quality, teamwork ability, collaborative, decision making, perfectionist and performance oriented.  </p>
+		            <p>To seek a career with a major corporation that will allow me to explore my potential and provide me with a challenging atmosphere in which I can put my abilities to use and assist my team and organisation thrive. Furthermore, I possess a variety of abilities such as Personal - diligence, optimism, calm, keen learner, determination, and some Professional - Leadership quality, teamwork ability, collaborative, decision making, perfectionist, and performance driven. Dedicated to improving skills and abilities while providing important technical knowledge and boundless enthusiasm. Willingness to take on additional duties in order to attain team goals. Capable of properly evaluating and analysing problems and providing genuine realistic solutions. Organized and dependable candidate successful at managing multiple priorities with a positive attitude.  </p>
 		            <ul class="about-info mt-4 px-md-0 px-2">
 		            	<li class="d-flex"><span>Name:</span> <span>Atharva Kabra</span></li>
 		            	<li class="d-flex"><span>Date of birth:</span> <span>March 12, 2000</span></li>
@@ -221,7 +221,7 @@
 								<i class="flaticon-analysis"></i>
 							</span>
 							<div class="desc">
-								<h3 class="mb-5">Object Detection</h3>
+								<h3 class="mb-5">Add Makker </h3>
 							</div>
 						</a>
 					</div>
@@ -626,7 +626,7 @@
 }</style><div class="myDIV">Indore , India</div>
 <div class="hide">Latitude: 22.7315844
 Longitude: 75.81852
-<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3679.7537883254677!2d75.81704471430784!3d22.737390985098223!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x7ae0ba1de7286707!2zMjLCsDQ0JzE0LjYiTiA3NcKwNDknMDkuMiJF!5e0!3m2!1sen!2sin!4v1662395397185!5m2!1sen!2sin" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3679.7537883254677!2d75.81704471430784!3d22.737390985098223!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x7ae0ba1de7286707!2zMjLCsDQ0JzE0LjYiTiA3NcKwNDknMDkuMiJF!5e0!3m2!1sen!2sin!4v1662395397185!5m2!1sen!2sin" width="1000" height="1000" style="border: 20px" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 </div>
 
 	          </div>
